# p2p-chat-terminal-client

./: Dockerfile  Makefile  README.md  docker-compose.yaml  requirements.txt  setup.cfg
src/terminal_client/: main.py  p2p_chat.py  p2p_client.py
