[metadata]
name = p2p-chat-terminal-client
version = 0.0.0
author = JefvdA
author_email = jef.v.d.a@live.be
description = A cli terminal application, which is a part of a larger a peer-to-peer chat application project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JefvdA/p2p-chat-terminal-client
project_urls =
    Bug Tracker = https://github.com/JefvdA/p2p-chat-terminal-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
exclude = tests*

[options.entry_points]
console_scripts =
    p2p-chat = terminal_client.p2p_chat:app